--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
         <li><a href="/services.html">Services</a></li>
+        <li><a href="/properties.html">Properties</a></li>
         <li><a href="/blog/blog.html">Blog</a></li>
         <li><a href="/gallery.html">Gallery</a></li>
         <li><a href="/contact.html">Contact</a></li>
@@ -77,7 +78,6 @@
       </a>
     </div>
   </section>
-
 
   <!-- Horizontal Gallery -->
   <section class="horizontal-gallery">
