--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,7 @@
       <li><a href="/about.html">About</a></li>
       <li><a href="/blog/blog.html">Blog</a></li>
       <li><a href="/services.html">Services</a></li>
+      <li><a href="/properties.html">Properties</a></li>
       <li><a href="/gallery.html" class="active">Gallery</a></li>
       <li><a href="/contact.html">Contact</a></li>
     </ul>
